[project]
name = "mcptokens"
version = "1.0.0"
description = "172 tokens in your agent's harness. One MCP tool that counts the tool-definition cost of any other MCP server."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "tokens", "context", "ai-agent", "inspect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
dependencies = [
    "tiktoken>=0.7",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[project.urls]
Repository = "https://github.com/dondai1234/mcptokens"
Issues = "https://github.com/dondai1234/mcptokens/issues"
Changelog = "https://github.com/dondai1234/mcptokens/blob/main/CHANGELOG.md"

[project.scripts]
mcptokens = "mcptokens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcptokens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
markers = [
    "e2e: end-to-end tests that spawn real MCP servers. Skip by default.",
]
